--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -557,6 +557,20 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\F2SMY58Q\\Li and Ning - 2023 - Autonomous GIS the next-generation AI-powered GIS.pdf;C\:\\Users\\oskar\\Zotero\\storage\\JRUTEB6E\\2305.html}
 }
 
+@inproceedings{linROUGEPackageAutomatic2004,
+  title = {{{ROUGE}}: {{A Package}} for {{Automatic Evaluation}} of {{Summaries}}},
+  shorttitle = {{{ROUGE}}},
+  booktitle = {Text {{Summarization Branches Out}}},
+  author = {Lin, Chin-Yew},
+  year = {2004},
+  month = jul,
+  pages = {74--81},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Barcelona, Spain}},
+  urldate = {2023-12-07},
+  file = {C:\Users\oskar\Zotero\storage\DR2YMCEH\Lin - 2004 - ROUGE A Package for Automatic Evaluation of Summa.pdf}
+}
+
 @article{maehlumSOSI2023,
   title = {{SOSI}},
   author = {M{\ae}hlum, Lars and R{\o}d, Jan Ketil},
@@ -820,6 +834,22 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\2GXBWJNW\\Ouyang et al. - 2022 - Training language models to follow instructions wi.pdf;C\:\\Users\\oskar\\Zotero\\storage\\587BTE6P\\2203.html}
+}
+
+@inproceedings{papineniBleuMethodAutomatic2002,
+  title = {Bleu: A {{Method}} for {{Automatic Evaluation}} of {{Machine Translation}}},
+  shorttitle = {Bleu},
+  booktitle = {Proceedings of the 40th {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}}},
+  author = {Papineni, Kishore and Roukos, Salim and Ward, Todd and Zhu, Wei-Jing},
+  editor = {Isabelle, Pierre and Charniak, Eugene and Lin, Dekang},
+  year = {2002},
+  month = jul,
+  pages = {311--318},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Philadelphia, Pennsylvania, USA}},
+  doi = {10.3115/1073083.1073135},
+  urldate = {2023-12-07},
+  file = {C:\Users\oskar\Zotero\storage\B5PXQHSU\Papineni et al. - 2002 - Bleu a Method for Automatic Evaluation of Machine.pdf}
 }
 
 @misc{PauseGiantAI,
