--- a/tex/frontmatter/abstract.tex
+++ b/tex/frontmatter/abstract.tex
@@ -35,3 +35,5 @@ When writing the abstract, keep in mind that most people might only read this te
 What you really want to accomplish is that people who read the abstract will get drawn into your project and read the rest of the text too.
 However, the old saying most definitely applies here: You never get a second chance to make a first impression.
 \end{comment}
+
+\todo{To be written}
