--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -60,3 +60,5 @@
 \newacronym{acr:rlhf}{RLHF}{Reinforcement Learning from Human Feedback}
 \newacronym{acr:ppo}{PPO}{Proximal Policy Optimization}
 \newacronym{acr:gan}{GAN}{Generative Adverserial Network}
+\newacronym{acr:bleu}{BLEU}{BiLingual Evaluation Understudy}
+\newacronym{acr:rouge}{ROUGE}{Recall-Oriented Understudy}
