--- a/tex/main.tex
+++ b/tex/main.tex
@@ -190,14 +190,14 @@ acronym] 				% create a list of abbreviations
 {glossaries}
 \usepackage[acronym]{glossaries}
 \makeglossaries
-\loadglsentries[main]{frontmatter/glossary}
+\loadglsentries[main]{frontmatter/glossary.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Author
 % Fill in here, and use these commands in the text.
 \newcommand{\thesisAuthor}{Karl Oskar Magnus Holm}
-\newcommand{\thesisTitle}{LLMS - The Death of GIS Analysis?}
-\newcommand{\thesisSubtitle}{An Investigation into Using Large Language Models to Make GIS Analysis Simpler, Faster, and More Accessible}
+\newcommand{\thesisTitle}{LLMs - The Death of GIS Analysis?}
+\newcommand{\thesisSubtitle}{An Investigation into Using Large Language Models for GIS Data Analysis}
 \newcommand{\thesisType}{Specialization Project in Computer Science and Geomatics}
 \newcommand{\supervisor}{Supervisor: Hongchao Fan}
 \newcommand{\externalSupervisors}{External supervisors from Norkart: Alexander Salveson Nossum, Arild Nomeland and Rune Aasgaard}
@@ -279,8 +279,7 @@ acronym] 				% create a list of abbreviations
 \include{chapters/theory}
 \include{chapters/related_work}
 \include{chapters/experiments}
-\include{chapters/discussion}
-\include{chapters/conclusion}
+\include{chapters/discussion_and_conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
