Finish evaluation metrics

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -11,23 +11,6 @@
   file = {C:\Users\oskar\Zotero\storage\4VXGY5JH\announcing-mistral-7b.html}
 }
 
-@misc{anilPaLMTechnicalReport2023,
-  title = {{{PaLM}} 2 {{Technical Report}}},
-  author = {Anil, Rohan and Dai, Andrew M. and Firat, Orhan and Johnson, Melvin and Lepikhin, Dmitry and Passos, Alexandre and Shakeri, Siamak and Taropa, Emanuel and Bailey, Paige and Chen, Zhifeng and Chu, Eric and Clark, Jonathan H. and Shafey, Laurent El and Huang, Yanping and {Meier-Hellstern}, Kathy and Mishra, Gaurav and Moreira, Erica and Omernick, Mark and Robinson, Kevin and Ruder, Sebastian and Tay, Yi and Xiao, Kefan and Xu, Yuanzhong and Zhang, Yujing and Abrego, Gustavo Hernandez and Ahn, Junwhan and Austin, Jacob and Barham, Paul and Botha, Jan and Bradbury, James and Brahma, Siddhartha and Brooks, Kevin and Catasta, Michele and Cheng, Yong and Cherry, Colin and {Choquette-Choo}, Christopher A. and Chowdhery, Aakanksha and Crepy, Cl{\'e}ment and Dave, Shachi and Dehghani, Mostafa and Dev, Sunipa and Devlin, Jacob and D{\'i}az, Mark and Du, Nan and Dyer, Ethan and Feinberg, Vlad and Feng, Fangxiaoyu and Fienber, Vlad and Freitag, Markus and Garcia, Xavier and Gehrmann, Sebastian and Gonzalez, Lucas and {Gur-Ari}, Guy and Hand, Steven and Hashemi, Hadi and Hou, Le and Howland, Joshua and Hu, Andrea and Hui, Jeffrey and Hurwitz, Jeremy and Isard, Michael and Ittycheriah, Abe and Jagielski, Matthew and Jia, Wenhao and Kenealy, Kathleen and Krikun, Maxim and Kudugunta, Sneha and Lan, Chang and Lee, Katherine and Lee, Benjamin and Li, Eric and Li, Music and Li, Wei and Li, YaGuang and Li, Jian and Lim, Hyeontaek and Lin, Hanzhao and Liu, Zhongtao and Liu, Frederick and Maggioni, Marcello and Mahendru, Aroma and Maynez, Joshua and Misra, Vedant and Moussalem, Maysam and Nado, Zachary and Nham, John and Ni, Eric and Nystrom, Andrew and Parrish, Alicia and Pellat, Marie and Polacek, Martin and Polozov, Alex and Pope, Reiner and Qiao, Siyuan and Reif, Emily and Richter, Bryan and Riley, Parker and Ros, Alex Castro and Roy, Aurko and Saeta, Brennan and Samuel, Rajkumar and Shelby, Renee and Slone, Ambrose and Smilkov, Daniel and So, David R. and Sohn, Daniel and Tokumine, Simon and Valter, Dasha and Vasudevan, Vijay and Vodrahalli, Kiran and Wang, Xuezhi and Wang, Pidong and Wang, Zirui and Wang, Tao and Wieting, John and Wu, Yuhuai and Xu, Kelvin and Xu, Yunhan and Xue, Linting and Yin, Pengcheng and Yu, Jiahui and Zhang, Qiao and Zheng, Steven and Zheng, Ce and Zhou, Weikang and Zhou, Denny and Petrov, Slav and Wu, Yonghui},
-  year = {2023},
-  month = sep,
-  number = {arXiv:2305.10403},
-  eprint = {2305.10403},
-  primaryclass = {cs},
-  publisher = {{arXiv}},
-  doi = {10.48550/arXiv.2305.10403},
-  urldate = {2023-12-07},
-  abstract = {We introduce PaLM 2, a new state-of-the-art language model that has better multilingual and reasoning capabilities and is more compute-efficient than its predecessor PaLM. PaLM 2 is a Transformer-based model trained using a mixture of objectives. Through extensive evaluations on English and multilingual language, and reasoning tasks, we demonstrate that PaLM 2 has significantly improved quality on downstream tasks across different model sizes, while simultaneously exhibiting faster and more efficient inference compared to PaLM. This improved efficiency enables broader deployment while also allowing the model to respond faster, for a more natural pace of interaction. PaLM 2 demonstrates robust reasoning capabilities exemplified by large improvements over PaLM on BIG-Bench and other reasoning tasks. PaLM 2 exhibits stable performance on a suite of responsible AI evaluations, and enables inference-time control over toxicity without additional overhead or impact on other capabilities. Overall, PaLM 2 achieves state-of-the-art performance across a diverse set of tasks and capabilities. When discussing the PaLM 2 family, it is important to distinguish between pre-trained models (of various sizes), fine-tuned variants of these models, and the user-facing products that use these models. In particular, user-facing products typically include additional pre- and post-processing steps. Additionally, the underlying models may evolve over time. Therefore, one should not expect the performance of user-facing products to exactly match the results reported in this report.},
-  archiveprefix = {arxiv},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
-  file = {C\:\\Users\\oskar\\Zotero\\storage\\Y7J6HBIJ\\Anil et al. - 2023 - PaLM 2 Technical Report.pdf;C\:\\Users\\oskar\\Zotero\\storage\\QMQKS6A2\\2305.html}
-}
-
 @misc{bastianLargeLanguageModels2023,
   title = {Large Language Models Are Powerful Imitators, but Not Innovators},
   author = {Bastian, Matthias},
@@ -389,6 +372,15 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\G93HDPLT\\Huang et al. - 2023 - Learning urban region representations with POIs an.pdf;C\:\\Users\\oskar\\Zotero\\storage\\QJ7NV2IS\\S0924271622003148.html}
 }
 
+@misc{huggingfacePerplexityFixedlengthModels,
+  title = {Perplexity of Fixed-Length Models},
+  author = {{Hugging Face}},
+  urldate = {2023-12-09},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/docs/transformers/perplexity},
+  file = {C:\Users\oskar\Zotero\storage\YS2BKABR\perplexity.html}
+}
+
 @incollection{hughesTechnologicalMomentum1994,
   title = {Technological Momentum},
   booktitle = {Does {{Technology Drive History}}? {{The Dilemma}} of {{Technological Determinism}}},
@@ -427,22 +419,6 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\FBDIM7D6\\Hu et al. - 2021 - LoRA Low-Rank Adaptation of Large Language Models.pdf;C\:\\Users\\oskar\\Zotero\\storage\\HPY45HFE\\2106.html}
-}
-
-@article{jelinekPerplexityMeasureDifficulty2005,
-  title = {Perplexity{\textemdash}a Measure of the Difficulty of Speech Recognition Tasks},
-  author = {Jelinek, F. and Mercer, R. L. and Bahl, L. R. and Baker, J. K.},
-  year = {2005},
-  month = aug,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {62},
-  number = {S1},
-  pages = {S63},
-  issn = {0001-4966},
-  doi = {10.1121/1.2016299},
-  urldate = {2023-12-07},
-  abstract = {Using counterexamples, we show that vocabulary size and static and dynamic branching factors are all inadequate as measures of speech recognition complexity of finite state grammars. Information theoretic arguments show that perplexity (the logarithm of which is the familiar entropy) is a more appropriate measure of equivalent choice. It too has certain weaknesses which we discuss. We show that perplexity can also be applied to languages having no obvious statistical description, since an entropy-maximizing probability assignment can be found for any finite-state grammar. Table I shows perplexity values for some well-known speech recognition tasks. Perplexity Vocabulary Dynamic Phone Word size branching factorIBM-Lasers 2.14 21.11 1000 1000IBM-Raleigh 1.69 7.74 250 7.32CMU-AIX05 1.52 6.41 1011 35},
-  file = {C\:\\Users\\oskar\\Zotero\\storage\\GYCBF4NK\\Jelinek et al. - 2005 - Perplexity—a measure of the difficulty of speech r.pdf;C\:\\Users\\oskar\\Zotero\\storage\\7J7I8QB2\\Perplexity-a-measure-of-the-difficulty-of-speech.html}
 }
 
 @misc{jiangActiveRetrievalAugmented2023,
@@ -555,6 +531,21 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Human-Computer Interaction},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\F2SMY58Q\\Li and Ning - 2023 - Autonomous GIS the next-generation AI-powered GIS.pdf;C\:\\Users\\oskar\\Zotero\\storage\\JRUTEB6E\\2305.html}
+}
+
+@inproceedings{liDiversityPromotingObjectiveFunction2016,
+  title = {A {{Diversity-Promoting Objective Function}} for {{Neural Conversation Models}}},
+  booktitle = {Proceedings of the 2016 {{Conference}} of the {{North American Chapter}} of the {{Association}} for {{Computational Linguistics}}: {{Human Language Technologies}}},
+  author = {Li, Jiwei and Galley, Michel and Brockett, Chris and Gao, Jianfeng and Dolan, Bill},
+  editor = {Knight, Kevin and Nenkova, Ani and Rambow, Owen},
+  year = {2016},
+  month = jun,
+  pages = {110--119},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{San Diego, California}},
+  doi = {10.18653/v1/N16-1014},
+  urldate = {2023-12-09},
+  file = {C:\Users\oskar\Zotero\storage\N9UYMECF\Li et al. - 2016 - A Diversity-Promoting Objective Function for Neura.pdf}
 }
 
 @inproceedings{linROUGEPackageAutomatic2004,
@@ -684,6 +675,23 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Computation and Language},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\KXD9RICF\\Mialon et al. - 2023 - Augmented Language Models a Survey.pdf;C\:\\Users\\oskar\\Zotero\\storage\\AESC743L\\2302.html}
+}
+
+@misc{mirandaCurseLowTask2022,
+  title = {The {{Curse}} of {{Low Task Diversity}}: {{On}} the {{Failure}} of {{Transfer Learning}} to {{Outperform MAML}} and {{Their Empirical Equivalence}}},
+  shorttitle = {The {{Curse}} of {{Low Task Diversity}}},
+  author = {Miranda, Brando and Yu, Patrick and Wang, Yu-Xiong and Koyejo, Sanmi},
+  year = {2022},
+  month = aug,
+  number = {arXiv:2208.01545},
+  eprint = {2208.01545},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-12-09},
+  abstract = {Recently, it has been observed that a transfer learning solution might be all we need to solve many few-shot learning benchmarks -- thus raising important questions about when and how meta-learning algorithms should be deployed. In this paper, we seek to clarify these questions by 1. proposing a novel metric -- the diversity coefficient -- to measure the diversity of tasks in a few-shot learning benchmark and 2. by comparing Model-Agnostic Meta-Learning (MAML) and transfer learning under fair conditions (same architecture, same optimizer, and all models trained to convergence). Using the diversity coefficient, we show that the popular MiniImageNet and CIFAR-FS few-shot learning benchmarks have low diversity. This novel insight contextualizes claims that transfer learning solutions are better than meta-learned solutions in the regime of low diversity under a fair comparison. Specifically, we empirically find that a low diversity coefficient correlates with a high similarity between transfer learning and MAML learned solutions in terms of accuracy at meta-test time and classification layer similarity (using feature based distance metrics like SVCCA, PWCCA, CKA, and OPD). To further support our claim, we find this meta-test accuracy holds even as the model size changes. Therefore, we conclude that in the low diversity regime, MAML and transfer learning have equivalent meta-test performance when both are compared fairly. We also hope our work inspires more thoughtful constructions and quantitative evaluations of meta-learning benchmarks in the future.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\BDPKAUS5\\Miranda et al. - 2022 - The Curse of Low Task Diversity On the Failure of.pdf;C\:\\Users\\oskar\\Zotero\\storage\\DG22I7AY\\2208.html}
 }
 
 @book{mooneyUnderstandingGeospatialSkills2023,
@@ -1137,6 +1145,21 @@
   abstract = {Here you can find our library of tutorials for learning all about STAC.},
   howpublished = {https://stacspec.org/en/tutorials/},
   langid = {english}
+}
+
+@inproceedings{stasaskiSemanticDiversityDialogue2022,
+  title = {Semantic {{Diversity}} in {{Dialogue}} with {{Natural Language Inference}}},
+  booktitle = {Proceedings of the 2022 {{Conference}} of the {{North American Chapter}} of the {{Association}} for {{Computational Linguistics}}: {{Human Language Technologies}}},
+  author = {Stasaski, Katherine and Hearst, Marti},
+  editor = {Carpuat, Marine and {de Marneffe}, Marie-Catherine and Meza Ruiz, Ivan Vladimir},
+  year = {2022},
+  month = jul,
+  pages = {85--98},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Seattle, United States}},
+  doi = {10.18653/v1/2022.naacl-main.6},
+  urldate = {2023-12-09},
+  abstract = {Generating diverse, interesting responses to chitchat conversations is a problem for neural conversational agents. This paper makes two substantial contributions to improving diversity in dialogue generation. First, we propose a novel metric which uses Natural Language Inference (NLI) to measure the semantic diversity of a set of model responses for a conversation. We evaluate this metric using an established framework (Tevet and Berant, 2021) and find strong evidence indicating NLI Diversity is correlated with semantic diversity. Specifically, we show that the contradiction relation is more useful than the neutral relation for measuring this diversity and that incorporating the NLI model's confidence achieves state-of-the-art results. Second, we demonstrate how to iteratively improve the semantic diversity of a sampled set of responses via a new generation procedure called Diversity Threshold Generation, which results in an average 137\% increase in NLI Diversity compared to standard generation procedures.}
 }
 
 @misc{StrengtheningEuropeanAI,
