--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -62,3 +62,6 @@
 \newacronym{acr:gan}{GAN}{Generative Adverserial Network}
 \newacronym{acr:bleu}{BLEU}{BiLingual Evaluation Understudy}
 \newacronym{acr:rouge}{ROUGE}{Recall-Oriented Understudy}
+\newacronym{acr:mmi}{MMI}{Maximum Mutual Information}
+\newacronym{acr:lstm}{LSTM}{Long Short-Term Memory}
+\newacronym{acr:nli}{NLI}{Natural Language Inference}
