--- a/tex/main.tex
+++ b/tex/main.tex
@@ -38,6 +38,9 @@
 \usepackage{subcaption}
 \usepackage[shortlabels]{enumitem}
 \usepackage{datatool}
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmax}{argmax} % thin space, limits underneath in displays
+
 
 \DTLloaddb{literature_study}{../documents/literature_study.csv}
 
