--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -1188,6 +1188,22 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\VRDRSGTA\\Sun et al. - 2023 - Exploring the impact of low-rank adaptation on the.pdf;C\:\\Users\\oskar\\Zotero\\storage\\TLSXWYT4\\2309.html}
 }
 
+@misc{suzgunChallengingBIGBenchTasks2022,
+  title = {Challenging {{BIG-Bench Tasks}} and {{Whether Chain-of-Thought Can Solve Them}}},
+  author = {Suzgun, Mirac and Scales, Nathan and Sch{\"a}rli, Nathanael and Gehrmann, Sebastian and Tay, Yi and Chung, Hyung Won and Chowdhery, Aakanksha and Le, Quoc V. and Chi, Ed H. and Zhou, Denny and Wei, Jason},
+  year = {2022},
+  month = oct,
+  number = {arXiv:2210.09261},
+  eprint = {2210.09261},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-12-09},
+  abstract = {BIG-Bench (Srivastava et al., 2022) is a diverse evaluation suite that focuses on tasks believed to be beyond the capabilities of current language models. Language models have already made good progress on this benchmark, with the best model in the BIG-Bench paper outperforming average reported human-rater results on 65\% of the BIG-Bench tasks via few-shot prompting. But on what tasks do language models fall short of average human-rater performance, and are those tasks actually unsolvable by current language models? In this work, we focus on a suite of 23 challenging BIG-Bench tasks which we call BIG-Bench Hard (BBH). These are the task for which prior language model evaluations did not outperform the average human-rater. We find that applying chain-of-thought (CoT) prompting to BBH tasks enables PaLM to surpass the average human-rater performance on 10 of the 23 tasks, and Codex (code-davinci-002) to surpass the average human-rater performance on 17 of the 23 tasks. Since many tasks in BBH require multi-step reasoning, few-shot prompting without CoT, as done in the BIG-Bench evaluations (Srivastava et al., 2022), substantially underestimates the best performance and capabilities of language models, which is better captured via CoT prompting. As further analysis, we explore the interaction between CoT and model scale on BBH, finding that CoT enables emergent task performance on several BBH tasks with otherwise flat scaling curves.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\LQR9D9UB\\Suzgun et al. - 2022 - Challenging BIG-Bench Tasks and Whether Chain-of-T.pdf;C\:\\Users\\oskar\\Zotero\\storage\\C9V3K24C\\2210.html}
+}
+
 @misc{tangScienceDetectingLLMGenerated2023,
   title = {The {{Science}} of {{Detecting LLM-Generated Texts}}},
   author = {Tang, Ruixiang and Chuang, Yu-Neng and Hu, Xia},
@@ -1475,6 +1491,24 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\B5WNQJPH\\Yoran et al. - 2023 - Making Retrieval-Augmented Language Models Robust .pdf;C\:\\Users\\oskar\\Zotero\\storage\\H7PN98VX\\2310.html}
+}
+
+@misc{zellersHellaSwagCanMachine2019,
+  title = {{{HellaSwag}}: {{Can}} a {{Machine Really Finish Your Sentence}}?},
+  shorttitle = {{{HellaSwag}}},
+  author = {Zellers, Rowan and Holtzman, Ari and Bisk, Yonatan and Farhadi, Ali and Choi, Yejin},
+  year = {2019},
+  month = may,
+  number = {arXiv:1905.07830},
+  eprint = {1905.07830},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1905.07830},
+  urldate = {2023-12-09},
+  abstract = {Recent work by Zellers et al. (2018) introduced a new task of commonsense natural language inference: given an event description such as "A woman sits at a piano," a machine must select the most likely followup: "She sets her fingers on the keys." With the introduction of BERT, near human-level performance was reached. Does this mean that machines can perform human level commonsense inference? In this paper, we show that commonsense inference still proves difficult for even state-of-the-art models, by presenting HellaSwag, a new challenge dataset. Though its questions are trivial for humans ({$>$}95\% accuracy), state-of-the-art models struggle ({$<$}48\%). We achieve this via Adversarial Filtering (AF), a data collection paradigm wherein a series of discriminators iteratively select an adversarial set of machine-generated wrong answers. AF proves to be surprisingly robust. The key insight is to scale up the length and complexity of the dataset examples towards a critical 'Goldilocks' zone wherein generated text is ridiculous to humans, yet often misclassified by state-of-the-art models. Our construction of HellaSwag, and its resulting difficulty, sheds light on the inner workings of deep pretrained models. More broadly, it suggests a new path forward for NLP research, in which benchmarks co-evolve with the evolving state-of-the-art in an adversarial way, so as to present ever-harder challenges.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\UPR2CQAR\\Zellers et al. - 2019 - HellaSwag Can a Machine Really Finish Your Senten.pdf;C\:\\Users\\oskar\\Zotero\\storage\\P3CK28LB\\1905.html}
 }
 
 @misc{zhangGeoGPTUnderstandingProcessing2023,
