No empty sections

--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -64,3 +64,10 @@
 \newacronym{acr:mmi}{MMI}{Maximum Mutual Information}
 \newacronym{acr:lstm}{LSTM}{Long Short-Term Memory}
 \newacronym{acr:nli}{NLI}{Natural Language Inference}
+\newacronym{acr:nlidb}{NLIDB}{Natural Language Interfaces for Database}
+\newacronym{acr:ui}{UI}{User Interface}
+\newacronym{acr:cli}{CLI}{Command Line Interface}
+\newacronym{acr:lsh}{LSH}{Locality-Sensitive Hashing}
+\newacronym{acr:faiss}{FAISS}{Facebook AI Similarity Search}
+\newacronym{acr:fkb}{FKB}{Felles KartdataBase}
+\newacronym{acr:nsdi}{NSDI}{National Spatial Data Infrastructure}
