--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -786,6 +786,24 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\BDPKAUS5\\Miranda et al. - 2022 - The Curse of Low Task Diversity On the Failure of.pdf;C\:\\Users\\oskar\\Zotero\\storage\\DG22I7AY\\2208.html}
 }
 
+@misc{mitraOrcaTeachingSmall2023,
+  title = {Orca 2: {{Teaching Small Language Models How}} to {{Reason}}},
+  shorttitle = {Orca 2},
+  author = {Mitra, Arindam and Del Corro, Luciano and Mahajan, Shweti and Codas, Andres and Simoes, Clarisse and Agarwal, Sahaj and Chen, Xuxi and Razdaibiedina, Anastasia and Jones, Erik and Aggarwal, Kriti and Palangi, Hamid and Zheng, Guoqing and Rosset, Corby and Khanpour, Hamed and Awadallah, Ahmed},
+  year = {2023},
+  month = nov,
+  number = {arXiv:2311.11045},
+  eprint = {2311.11045},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  url = {http://arxiv.org/abs/2311.11045},
+  urldate = {2023-12-12},
+  abstract = {Orca 1 learns from rich signals, such as explanation traces, allowing it to outperform conventional instruction-tuned models on benchmarks like BigBench Hard and AGIEval. In Orca 2, we continue exploring how improved training signals can enhance smaller LMs' reasoning abilities. Research on training small LMs has often relied on imitation learning to replicate the output of more capable models. We contend that excessive emphasis on imitation may restrict the potential of smaller models. We seek to teach small LMs to employ different solution strategies for different tasks, potentially different from the one used by the larger model. For example, while larger models might provide a direct answer to a complex task, smaller models may not have the same capacity. In Orca 2, we teach the model various reasoning techniques (step-by-step, recall then generate, recall-reason-generate, direct answer, etc.). More crucially, we aim to help the model learn to determine the most effective solution strategy for each task. We evaluate Orca 2 using a comprehensive set of 15 diverse benchmarks (corresponding to approximately 100 tasks and over 36,000 unique prompts). Orca 2 significantly surpasses models of similar size and attains performance levels similar or better to those of models 5-10x larger, as assessed on complex tasks that test advanced reasoning abilities in zero-shot settings. make Orca 2 weights publicly available at aka.ms/orca-lm to support research on the development, evaluation, and alignment of smaller LMs},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\4ZPN6IZX\\Mitra et al. - 2023 - Orca 2 Teaching Small Language Models How to Reas.pdf;C\:\\Users\\oskar\\Zotero\\storage\\LK9TDD3H\\2311.html}
+}
+
 @book{mooneyUnderstandingGeospatialSkills2023,
   title = {Towards {{Understanding}} the {{Geospatial Skills}} of {{ChatGPT}}: {{Taking}} a {{Geographic Information Systems}} ({{GIS}}) {{Exam}}},
   shorttitle = {Towards {{Understanding}} the {{Geospatial Skills}} of {{ChatGPT}}},
