--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -1245,6 +1245,25 @@
   file = {C:\Users\oskar\Zotero\storage\29PNLI8M\Shevlane et al. - 2023 - Model evaluation for extreme risks.pdf}
 }
 
+@misc{shiREPLUGRetrievalAugmentedBlackBox2023,
+  title = {{{REPLUG}}: {{Retrieval-Augmented Black-Box Language Models}}},
+  shorttitle = {{{REPLUG}}},
+  author = {Shi, Weijia and Min, Sewon and Yasunaga, Michihiro and Seo, Minjoon and James, Rich and Lewis, Mike and Zettlemoyer, Luke and Yih, Wen-tau},
+  year = {2023},
+  month = may,
+  number = {arXiv:2301.12652},
+  eprint = {2301.12652},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2301.12652},
+  url = {http://arxiv.org/abs/2301.12652},
+  urldate = {2023-12-12},
+  abstract = {We introduce REPLUG, a retrieval-augmented language modeling framework that treats the language model (LM) as a black box and augments it with a tuneable retrieval model. Unlike prior retrieval-augmented LMs that train language models with special cross attention mechanisms to encode the retrieved text, REPLUG simply prepends retrieved documents to the input for the frozen black-box LM. This simple design can be easily applied to any existing retrieval and language models. Furthermore, we show that the LM can be used to supervise the retrieval model, which can then find documents that help the LM make better predictions. Our experiments demonstrate that REPLUG with the tuned retriever significantly improves the performance of GPT-3 (175B) on language modeling by 6.3\%, as well as the performance of Codex on five-shot MMLU by 5.1\%.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\C4MRW2R6\\Shi et al. - 2023 - REPLUG Retrieval-Augmented Black-Box Language Mod.pdf;C\:\\Users\\oskar\\Zotero\\storage\\MZUGXWFF\\2301.html}
+}
+
 @misc{skjuveWhyPeopleUse2023,
   type = {{{SSRN Scholarly Paper}}},
   title = {Why {{People Use ChatGPT}}},
