--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -71,3 +71,4 @@
 \newacronym{acr:faiss}{FAISS}{Facebook AI Similarity Search}
 \newacronym{acr:fkb}{FKB}{Felles KartdataBase}
 \newacronym{acr:nsdi}{NSDI}{National Spatial Data Infrastructure}
+\newacronym{acr:nlu}{NLU}{Natural Language Understanding}
