Add Open Interpreter stuff and abstract

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -513,6 +513,18 @@
   langid = {american}
 }
 
+@misc{killianlucasKillianLucasOpeninterpreter2023,
+  title = {{{KillianLucas}}/Open-Interpreter},
+  author = {{KillianLucas}},
+  year = {2023},
+  month = dec,
+  url = {https://github.com/KillianLucas/open-interpreter},
+  urldate = {2023-12-13},
+  abstract = {OpenAI's Code Interpreter in your terminal, running locally},
+  copyright = {AGPL-3.0},
+  keywords = {chatgpt,gpt-4,interpreter,javascript,nodejs,python,react}
+}
+
 @misc{kmetzUnlockingPotentialAI2023,
   title = {Unlocking the {{Potential}} of {{AI Models}} for {{Geospatial Analysis Through Prompt Engineering}}},
   author = {Kmetz, Ryan},
