One read-through

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -5,19 +5,6 @@
   file = {C:\Users\oskar\Zotero\storage\EXGN5DIA\agentprotocol.ai.html}
 }
 
-@misc{aiMistral7B2023,
-  title = {Mistral {{7B}}},
-  author = {AI, Mistral},
-  year = {2023},
-  month = sep,
-  url = {https://mistral.ai/news/announcing-mistral-7b/},
-  urldate = {2023-12-07},
-  abstract = {The best 7B model to date, Apache 2.0},
-  chapter = {news},
-  langid = {american},
-  file = {C:\Users\oskar\Zotero\storage\4VXGY5JH\announcing-mistral-7b.html}
-}
-
 @misc{bastianLargeLanguageModels2023,
   title = {Large Language Models Are Powerful Imitators, but Not Innovators},
   author = {Bastian, Matthias},
@@ -798,6 +785,19 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\BDPKAUS5\\Miranda et al. - 2022 - The Curse of Low Task Diversity On the Failure of.pdf;C\:\\Users\\oskar\\Zotero\\storage\\DG22I7AY\\2208.html}
 }
 
+@misc{mistralaiMistral7B2023,
+  title = {Mistral {{7B}}},
+  author = {{Mistral AI}},
+  year = {2023},
+  month = sep,
+  url = {https://mistral.ai/news/announcing-mistral-7b/},
+  urldate = {2023-12-07},
+  abstract = {The best 7B model to date, Apache 2.0},
+  chapter = {news},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\4VXGY5JH\announcing-mistral-7b.html}
+}
+
 @misc{mitraOrcaTeachingSmall2023,
   title = {Orca 2: {{Teaching Small Language Models How}} to {{Reason}}},
   shorttitle = {Orca 2},
@@ -844,9 +844,10 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\P4ZBQVD7\\Moor - 2006 - The Nature, Importance, and Difficulty of Machine .pdf;C\:\\Users\\oskar\\Zotero\\storage\\B8H3FN5S\\1667948.html}
 }
 
-@article{nascimentoFamilyNaturalLanguage,
+@article{nascimentoFamilyNaturalLanguage2023,
   title = {A {{Family}} of {{Natural Language Interfaces}} for {{Databases}} Based on {{ChatGPT}} and {{LangChain}}},
   author = {Nascimento, Eduardo and Garc{\'i}a, Grettel and Victorio, Wendy and Lemos, Melissa and Izquierdo, Yenier and Garcia, Robinson and Leme, Luiz and Casanova, Marco},
+  year = {2023},
   abstract = {This poster paper proposes a family of Natural Language (NL) interfaces for databases (NLIDBs) that use ChatGPT and LangChain features to compile NL sentences expressing database questions into SQL queries or to extract keywords from NL sentences, which are passed to a database keyword search tool. The use of ChatGPT reduces dealing with NL questions to a few-shot learning process for the benefit of developers interested in creating NLIDBs. The paper concludes by comparing the NLIDBs in the family.},
   langid = {english},
   file = {C:\Users\oskar\Zotero\storage\J7R85NP7\Nascimento et al. - A Family of Natural Language Interfaces for Databa.pdf}
