--- a/tex/frontmatter/abstract.tex
+++ b/tex/frontmatter/abstract.tex
@@ -36,6 +36,6 @@ What you really want to accomplish is that people who read the abstract will get
 However, the old saying most definitely applies here: You never get a second chance to make a first impression.
 \end{comment}
 
-The emergence of powerful \gls{acr:llm} with remarkable reasoning capabilities and coding knowledge, like the latest additions to the \acrshort{acr:gpt} series---\acrshort{acr:gpt}-4, enables automation of a wide range of tasks. ChatGPT's Code Interpreter is able to generate, execute, and review its own code, making creation of autonomous \acrshort{acr:ai} agents far easier than before. This specialization project explores the feasibility of \gls{acr:llm}-based \acrshort{acr:gis} agents, investigating current use cases for ChatGPT in the field of \acrshort{acr:gis}, and how such a system can be implemented. The project seeks to highlight the strengths of current technologies, but also highlight its weaknesses and suggest areas of improvements and possible solutions. These goals are achieved through a literature study and experiments that aim to support the findings of the literature study.
+The emergence of powerful \gls{acr:llm} with remarkable reasoning capabilities and coding knowledge---like \acrshort{acr:gpt}-4, the latest additions to the \acrshort{acr:gpt} series---enables automation of a wide range of tasks. ChatGPT's Code Interpreter is able to generate, execute, and review its own code, making creation of autonomous \acrshort{acr:ai} agents far easier than before. This specialization project explores the feasibility of \gls{acr:llm}-based \acrshort{acr:gis} agents, investigating current use cases for ChatGPT in the field of \acrshort{acr:gis}, and how such a system can be implemented. The project seeks to highlight the strengths of current technologies, but also highlight its weaknesses and suggest areas of improvements and possible solutions. These goals are achieved through a literature study and experiments that aim to support the findings of the literature study. The literature study presents the body of work that has already been done in regards to the position of \acrshortpl{acr:llm} in the field of \acrshort{acr:gis}, as well as planning strategies applied in \acrshort{acr:llm}-based agents, and retrieval-augmented generation, that is, giving the \acrshort{acr:llm} \enquote{hooks} into the real world. The three experiments focus on ChatGPT's ability to handle geospatial data in various formats and through different channels.
 
 \glsresetall
