--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -30,7 +30,7 @@
 \newacronym{acr:aws}{AWS}{Amazon Web Services}
 \newacronym{acr:gpt}{GPT}{Generative Pre-trained Transformer}
 \newacronym{acr:bert}{BERT}{Bidirectional Encoder Representation from Transformers}
-\newacronym{acr:gis}{GIS}{Geographic information system}
+\newacronym{acr:gis}{GIS}{Geographic Information System}
 \newacronym{acr:ogc}{OGC}{Open Geospatial Consortium}
 \newacronym{acr:stac}{STAC}{SpatioTemporal Asset Catalog}
 \newacronym{acr:sosi}{SOSI}{Samordnet Opplegg for Stedfestet Informasjon}
