--- a/tex/main.tex
+++ b/tex/main.tex
@@ -211,7 +211,7 @@ acronym] 				% create a list of abbreviations
 \newcommand{\thesisTitle}{LLMs - The Death of GIS Analysis?}
 \newcommand{\thesisSubtitle}{An Investigation into Using Large Language Models for GIS Data Analysis}
 \newcommand{\thesisType}{Specialization Project in Computer Science and Geomatics}
-\newcommand{\supervisor}{Supervisor: Hongchao Fan}
+\newcommand{\supervisor}{Supervisor at NTNU: Hongchao Fan}
 \newcommand{\externalSupervisors}{External supervisors from Norkart: Alexander Salveson Nossum, Arild Nomeland and Rune Aasgaard}
 \newcommand{\thesisDate}{June 2024}
 
