Two read-throughs

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -59,6 +59,19 @@
   file = {C:\Users\oskar\Zotero\storage\T246WAYX\EGU23-14845_presentation.pdf}
 }
 
+@misc{ceylanLargeLanguageModel2023,
+  title = {Large {{Language Model Evaluation}} in 2023: 5 {{Methods}}},
+  shorttitle = {Large {{Language Model Evaluation}} in 2023},
+  author = {Ceylan, Burak},
+  year = {2023},
+  month = dec,
+  url = {https://research.aimultiple.com/large-language-model-evaluation/},
+  urldate = {2023-12-16},
+  abstract = {Large Language Models (LLMs) have expanded rapidly and may lead the AI transformation. This makes LLM evaluation important more than ever.},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\W6TKFU9N\large-language-model-evaluation.html}
+}
+
 @misc{chaseLangChain2022,
   title = {{{LangChain}}},
   author = {Chase, Harrison},
@@ -549,6 +562,15 @@
   abstract = {What's hot these days? ``Spam calls'' on WhatsApp? Crisis in Pakistan? Election in Karnataka?},
   langid = {english},
   file = {C:\Users\oskar\Zotero\storage\I2LWCNWM\what-are-people-asking-to-chatgpt-f5f324a6cc27.html}
+}
+
+@misc{LargeLanguageModel,
+  title = {Large {{Language Model Evaluation}} in 2023: 5 {{Methods}}},
+  shorttitle = {Large {{Language Model Evaluation}} in 2023},
+  url = {https://research.aimultiple.com/large-language-model-evaluation/},
+  urldate = {2023-12-16},
+  abstract = {Large Language Models (LLMs) have expanded rapidly and may lead the AI transformation. This makes LLM evaluation important more than ever.},
+  langid = {american}
 }
 
 @inproceedings{lewisRetrievalAugmentedGenerationKnowledgeIntensive2020,
