--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -72,3 +72,6 @@
 \newacronym{acr:fkb}{FKB}{Felles KartdataBase}
 \newacronym{acr:nsdi}{NSDI}{National Spatial Data Infrastructure}
 \newacronym{acr:nlu}{NLU}{Natural Language Understanding}
+\newacronym{acr:nlg}{NLG}{Natural Language Generation}
+\newacronym{acr:mbpp}{MBPP}{Mostly Basic Python Programming}
+\newacronym{acr:llama}{LLaMA}{Large Language Model Meta AI}
