Three read-throughs

--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -60,7 +60,7 @@
 \newacronym{acr:ppo}{PPO}{Proximal Policy Optimization}
 \newacronym{acr:gan}{GAN}{Generative Adverserial Network}
 \newacronym{acr:bleu}{BLEU}{BiLingual Evaluation Understudy}
-\newacronym{acr:rouge}{ROUGE}{Recall-Oriented Understudy}
+\newacronym{acr:rouge}{ROUGE}{Recall-Oriented Understudy for Gisting Evaluation}
 \newacronym{acr:mmi}{MMI}{Maximum Mutual Information}
 \newacronym{acr:lstm}{LSTM}{Long Short-Term Memory}
 \newacronym{acr:nli}{NLI}{Natural Language Inference}
