--- a/tex/main.tex
+++ b/tex/main.tex
@@ -212,7 +212,7 @@ acronym] 				% create a list of abbreviations
 \newcommand{\thesisSubtitle}{An Investigation into Using Large Language Models for GIS Data Analysis}
 \newcommand{\thesisType}{Specialization Project in Computer Science and Geomatics}
 \newcommand{\supervisor}{Supervisor at NTNU: Hongchao Fan}
-\newcommand{\externalSupervisors}{External supervisors from Norkart: Alexander Salveson Nossum, Arild Nomeland and Rune Aasgaard}
+\newcommand{\externalSupervisors}{External supervisors from Norkart: Alexander Salveson Nossum, Arild Nomeland, and Rune Aasgaard}
 \newcommand{\thesisDate}{December 2023}
 
 \graphicspath{ {./figs/} }
